--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <!-- Bootstrap has its own font for H1, H2, p, etc.  -->
 <!-- Look in BS4 Typography https://www.w3schools.com/bootstrap4/bootstrap_typography.asp -->
 <!-- Use your own CSS file to change those fonts if they do not correspond to your company's look -->
-<div class="container-md p-3 my-3 border bg-dark text-danger">
+<div class="container-fluid p-3 my-3 border bg-dark text-danger">
     <div class="row p-0">
         <div class="col">
             <img src="img/scissors-3-256.png" class="img-fluid">
@@ -64,7 +64,7 @@
     </div>
 </div>
 
-<div class="container p-3 my-3 border bg-dark text-white" id="services">
+<div class="container-fluid p-3 my-3 border bg-dark text-white" id="services">
     <div class="row p-0">
         <div class="col">
             <img src="img/barbers-pole-256.png" class="img-fluid">
@@ -132,7 +132,7 @@
 </div>
 
 
-<div class="container p-2 my-3 border bg-dark text-white" id="bookingContainer">
+<div class="container-fluid p-2 my-3 border bg-dark text-white" id="bookingContainer">
 
 
     <div class="row p-3">
@@ -216,7 +216,7 @@
 
 </div>
 
-<div class="container p-3 my-3 border bg-dark text-white" id="about">
+<div class="container-fluid p-3 my-3 border bg-dark text-white" id="about">
     <div class="row p-3">
 
         <div class="col">
