--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         <div class="col">
             <h1>Blade Barbershop</h1>
             <p>123 Seasame Street, ON, Canada</p>
+            <p>Telephone: 613-213-1211</p>
             <p>"A cut above the rest."</p>
         </div>
     </div>
@@ -87,13 +88,13 @@
                     <p>Select a number to view</p>
                     <div class="btn-group btn-group-toggle" data-toggle="buttons">
                         <label class="btn btn-secondary active ">
-                            <input type="radio" name="Hoptions" id="num1">Number 1
+                            <input type="radio" name="Hoptions" id="num1">Number 1 - $25
                         </label>
                         <label class="btn btn-secondary">
-                            <input type="radio" name="Hoptions" id="num2"> Number 2
+                            <input type="radio" name="Hoptions" id="num2"> Number 2 - $23
                         </label>
                         <label class="btn btn-secondary">
-                            <input type="radio" name="Hoptions" id="num3"> Number 3
+                            <input type="radio" name="Hoptions" id="num3"> Number 3 - $27
                         </label>
                     </div>
                 </div>
@@ -104,13 +105,13 @@
                     <p>Select a color to view</p>
                     <div class="btn-group btn-group-toggle" data-toggle="buttons">
                         <label class="btn btn-secondary active ">
-                            <input type="radio" name="Hoptions" id="blonde" >Blonde
+                            <input type="radio" name="Hoptions" id="blonde" >Blonde - $25
                         </label>
                         <label class="btn btn-secondary">
-                            <input type="radio" name="Hoptions" id="blackColor" >Black
+                            <input type="radio" name="Hoptions" id="blackColor" >Black - $30
                         </label>
                         <label class="btn btn-secondary">
-                            <input type="radio" name="Hoptions" id="greyColor">Grey
+                            <input type="radio" name="Hoptions" id="greyColor">Grey - $35
                         </label>
                     </div>
                 </div>
@@ -128,6 +129,8 @@
         </div>
 
     </div>
+
+
 
 </div>
 
